[package]
name = "tangle-cli"
version = "0.9.98"
authors = ["Liebi Technologies <tangle@liebi.com>"]
description = "tangle Parachain Node"
build = "build.rs"
default-run = "tangle"
edition = "2021"

[[bin]]
name = "tangle"
path = "src/main.rs"
required-features = ["cli"]

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
# third-party dependencies
clap = { workspace = true, features = ["derive"] }
parity-scale-codec = { workspace = true }
log = { workspace = true }

# primitives
sp-io = { workspace = true }
sp-core = { workspace = true }
sp-runtime = { workspace = true }

# client dependencies
sc-executor = { workspace = true }
sc-service = { workspace = true, optional = true }
sc-sysinfo = { workspace = true }
sc-telemetry = { workspace = true }
sc-tracing = { workspace = true }
sc-offchain = { workspace = true }

# node-specific dependencies
tangle-service = { workspace = true }
tangle-primitives = { workspace = true }

# CLI-specific dependencies
sc-cli = { workspace = true, optional = true }
try-runtime-cli = { workspace = true, optional = true }
frame-try-runtime = { workspace = true, optional = true }
frame-benchmarking-cli = { workspace = true, optional = true }
node-inspect = { workspace = true, optional = true }

# Cumulus dependencies
cumulus-client-cli = { workspace = true }
cumulus-client-service = { workspace = true }
cumulus-primitives-core = { workspace = true }

# Polkadot dependencies
polkadot-primitives = { workspace = true }
polkadot-cli = { workspace = true }
polkadot-parachain-primitives = { workspace = true }

[build-dependencies]
substrate-build-script-utils = { workspace = true, optional = true }

[features]
default = ["cli"]
cli = [
    "node-inspect",
    "sc-cli",
    "frame-benchmarking-cli",
    'try-runtime-cli',
    "sc-service",
    "substrate-build-script-utils",
]
runtime-benchmarks = ["tangle-service/runtime-benchmarks"]
with-tangle-runtime = [
    "tangle-service/with-tangle-kusama-runtime",
    "tangle-service/with-tangle-polkadot-runtime",
]
with-tangle-kusama-runtime = ["tangle-service/with-tangle-kusama-runtime"]
with-tangle-polkadot-runtime = ["tangle-service/with-tangle-polkadot-runtime"]
with-all-runtime = ["with-tangle-runtime"]
try-runtime = ["tangle-service/try-runtime", "try-runtime-cli/try-runtime"]
fast-runtime = ["tangle-service/fast-runtime"]
