[package]
name = "tangle-rpc"
version = "0.8.0"
authors = ["Edwin Wang <lark930@gmail.com>"]
edition = "2021"

[package.metadata.docs.rs]
targets = ["x86_64-unknown-linux-gnu"]

[dependencies]
jsonrpsee = { workspace = true, features = [ "macros", "server" ] }
tangle-primitives = { workspace = true }
sc-client-api = { workspace = true }
sc-rpc-api = { workspace = true }
sc-rpc = { workspace = true }
sc-transaction-pool-api = { workspace = true }
sp-api = { workspace = true }
sp-block-builder = { workspace = true }
sp-blockchain = { workspace = true }
sp-runtime = { workspace = true }
pallet-transaction-payment-rpc = { workspace = true }
substrate-frame-rpc-system = { workspace = true }
sygma-rpc = { workspace = true }
sygma-runtime-api = { workspace = true }

