[package]
name = "tangle-lst-minting"
version = "0.8.0"
authors = ["Kadokura <ymlll0508@gmail.com>"]
edition = "2021"

[package.metadata.docs.rs]
targets = ["x86_64-unknown-linux-gnu"]

[dependencies]
parity-scale-codec = { workspace = true, features = ["derive"] }
scale-info = { workspace = true, features = ["derive"] }
log = { workspace = true }
frame-support = { workspace = true }
frame-system = { workspace = true }
frame-benchmarking = { workspace = true, optional = true }
tangle-primitives = { workspace = true }
orml-traits = { workspace = true }
sp-std = { workspace = true }
hex-literal = { workspace = true }
pallet-balances = { workspace = true }
xcm = { workspace = true }
cumulus-primitives-core = { workspace = true }
sp-core = { workspace = true }

[dev-dependencies]
orml-tokens = { workspace = true }
tangle-currencies = { workspace = true }
orml-xtokens = { workspace = true }
orml-traits = { workspace = true }
sp-io = { workspace = true }
sp-runtime = { workspace = true }
pallet-collective = { workspace = true }
xcm-executor = { workspace = true }
xcm-builder = { workspace = true }
pallet-xcm = { workspace = true }
xcm = { workspace = true }
tangle-slp = { workspace = true }
tangle-asset-registry = { workspace = true }
tangle-runtime-common = { workspace = true }
env_logger = { workspace = true }

[features]
default = ["std"]
std = [
	"parity-scale-codec/std",
	"scale-info/std",
	"frame-support/std",
	"frame-system/std",
	"frame-benchmarking/std",
	"tangle-primitives/std",
	"orml-traits/std",
	"tangle-slp/std",
	"tangle-asset-registry/std",
	"tangle-runtime-common/std",
]

runtime-benchmarks = [
	"frame-benchmarking/runtime-benchmarks",
	"pallet-collective/runtime-benchmarks",
	"xcm-builder/runtime-benchmarks",
	"pallet-xcm/runtime-benchmarks",
]
try-runtime = ["frame-support/try-runtime"]
