[package]
name = "tangle-slpx"
description = "A pallet to manage the execution of XCM messages"
authors = ["hqwangningbo <2536935847@qq.com>"]
edition = "2021"
version = "0.8.0"

[package.metadata.docs.rs]
targets = ["x86_64-unknown-linux-gnu"]

[dependencies]
ethereum = { workspace = true, features = [ "with-codec" ] }
hex-literal = { workspace = true }
parity-scale-codec = { workspace = true, features = ["derive"] }
scale-info = { workspace = true, features = ["derive"] }
serde = { workspace = true,  features = ["derive"] }
frame-benchmarking = { workspace = true, optional = true }
frame-support = { workspace = true }
frame-system = { workspace = true }
cumulus-primitives-core = { workspace = true }
polkadot-parachain-primitives = { workspace = true }
sp-std = { workspace = true }
cumulus-pallet-xcm = { workspace = true }
sp-core = { workspace = true }
ethabi = { workspace = true }
sp-runtime = { workspace = true }
xcm = { workspace = true }
tiny-keccak = { workspace = true }
orml-traits = { workspace = true }
orml-xtokens = { workspace = true }
zenlink-protocol = { workspace = true }

tangle-primitives = { workspace = true }
tangle-xcm-interface = { workspace = true }
tangle-asset-registry = { workspace = true }
tangle-stable-pool = { workspace = true }
tangle-stable-asset = { workspace = true }
orml-tokens = { workspace = true }

[dev-dependencies]
hex = { workspace = true }
sp-io = { workspace = true }
pallet-balances = { workspace = true }
tangle-lst-minting = { workspace = true }
tangle-slp = { workspace = true }
cumulus-primitives-core = { workspace = true }
tangle-currencies = { workspace = true }
xcm-executor = { workspace = true }
xcm-builder = { workspace = true }
pallet-xcm  = { workspace = true }
xcm-simulator  = { workspace = true }
tangle-runtime-common = { workspace = true }
pallet-collective = { workspace = true }
parachain-info = { workspace = true }


[features]
default = ["std"]
std = [
	"parity-scale-codec/std",
	"frame-benchmarking?/std",
	"frame-support/std",
	"frame-system/std",
	"scale-info/std",
	"serde/std",
	"zenlink-protocol/std",
	"orml-traits/std",
	"orml-xtokens/std",
	"tangle-primitives/std",
	"cumulus-primitives-core/std",
	"sp-std/std",
	"tangle-slp/std",
	"tangle-runtime-common/std",
	"cumulus-pallet-xcm/std",
	"sp-core/std",
	"sp-runtime/std",
	"tangle-asset-registry/std",
	"tangle-stable-pool/std",
	"tangle-stable-asset/std",
]
runtime-benchmarks = [
	"frame-benchmarking/runtime-benchmarks",
	"frame-support/runtime-benchmarks",
	"frame-system/runtime-benchmarks",
	"pallet-xcm/runtime-benchmarks",
	"xcm-builder/runtime-benchmarks",
	"pallet-collective/runtime-benchmarks",
]
try-runtime = ["frame-support/try-runtime"]
with-tangle-polkadot-runtime = []
