[package]
name = "tangle-polkadot-runtime"
version = "0.8.0"

edition = "2021"
build = "build.rs"

[dependencies]
# third-party dependencies
parity-scale-codec = { workspace = true, features = ["derive", "max-encoded-len"] }
hex-literal = { workspace = true }
log = { workspace = true }
scale-info = { workspace = true, features = ["derive"] }
smallvec = { workspace = true }
static_assertions = { workspace = true }
strum = { workspace = true, features = ["derive"] }
strum_macros = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }

# frame dependencies
frame-benchmarking = { workspace = true, optional = true }
frame-executive = { workspace = true }
frame-support = { workspace = true, features = ["tuples-96"] }
frame-system = { workspace = true }
frame-system-benchmarking = { workspace = true, optional = true }
frame-system-rpc-runtime-api = { workspace = true }
frame-try-runtime = { workspace = true, optional = true }
pallet-asset-rate = { workspace = true }
pallet-aura = { workspace = true }
pallet-authorship = { workspace = true }
pallet-balances = { workspace = true }
pallet-bounties = { workspace = true }
pallet-collective = { workspace = true }
pallet-conviction-voting = { workspace = true }
pallet-democracy = { workspace = true }
pallet-elections-phragmen = { workspace = true }
pallet-identity = { workspace = true }
pallet-indices = { workspace = true }
pallet-membership = { workspace = true }
pallet-multisig = { workspace = true }
pallet-preimage = { workspace = true }
pallet-proxy = { workspace = true }
pallet-ranked-collective = { workspace = true }
pallet-referenda = { workspace = true }
pallet-scheduler = { workspace = true }
pallet-session = { workspace = true }
pallet-timestamp = { workspace = true }
pallet-tips = { workspace = true }
pallet-transaction-payment = { workspace = true }
pallet-transaction-payment-rpc-runtime-api = { workspace = true }
pallet-treasury = { workspace = true }
pallet-utility = { workspace = true }
pallet-whitelist = { workspace = true }
sp-api = { workspace = true }
sp-arithmetic = { workspace = true }
sp-block-builder = { workspace = true }
sp-consensus-aura = { workspace = true }
sp-core = { workspace = true }
sp-inherents = { workspace = true }
sp-io = { workspace = true }
sp-offchain = { workspace = true }
sp-runtime = { workspace = true }
sp-session = { workspace = true }
sp-staking = { workspace = true }
sp-std = { workspace = true }
sp-transaction-pool = { workspace = true }
sp-version = { workspace = true }
sp-genesis-builder = { workspace = true }


# Cumulus dependencies
cumulus-pallet-aura-ext = { workspace = true }
cumulus-pallet-dmp-queue = { workspace = true }
cumulus-pallet-parachain-system = { workspace = true }
cumulus-pallet-xcm = { workspace = true }
cumulus-pallet-xcmp-queue = { workspace = true }
cumulus-primitives-core = { workspace = true }
cumulus-primitives-timestamp = { workspace = true }
cumulus-primitives-utility = { workspace = true }
pallet-collator-selection  = { workspace = true }
parachain-info = { workspace = true }
pallet-sudo = { workspace = true }
pallet-assets = { workspace = true }
pallet-uniques = { workspace = true }


# Polkadot dependencies
pallet-xcm = { workspace = true }
pallet-message-queue = { workspace = true }
polkadot-parachain-primitives = { workspace = true }
polkadot-primitives = { workspace = true }
polkadot-runtime-common = { workspace = true }
xcm = { workspace = true }
xcm-builder = { workspace = true }
xcm-executor = { workspace = true }
parachains-common = { workspace = true }

# orml
orml-tokens = { workspace = true }
orml-traits = { workspace = true }
orml-unknown-tokens = { workspace = true }
orml-xcm = { workspace = true }
orml-xcm-support = { workspace = true }
orml-xtokens = { workspace = true }
orml-oracle = { workspace = true }

# zenlink
merkle-distributor = { workspace = true }
zenlink-protocol = { workspace = true }
zenlink-protocol-runtime-api = { workspace = true }
zenlink-stable-amm = { workspace = true }
zenlink-stable-amm-runtime-api = { workspace = true }
zenlink-swap-router = { workspace = true }

# tangle
tangle-asset-registry = { workspace = true }
tangle-currencies = { workspace = true }
tangle-primitives = { workspace = true }
tangle-runtime-common = { workspace = true }
tangle-slp = { workspace = true }
tangle-lst-minting = { workspace = true }
tangle-xcm-interface = { workspace = true }
tangle-parachain-staking = { workspace = true }

[build-dependencies]
substrate-wasm-builder = { workspace = true }

[features]
default = ["std"]
std = [
	"strum/std",
	"parity-scale-codec/std",
	"scale-info/std",
	"log/std",
	"frame-benchmarking?/std",
	"frame-executive/std",
	"frame-support/std",
	"frame-system-rpc-runtime-api/std",
	"frame-system/std",
	"frame-system-benchmarking?/std",
	"frame-try-runtime/std",
	"pallet-aura/std",
	"pallet-authorship/std",
	"pallet-balances/std",
	"pallet-bounties/std",
	"pallet-collective/std",
	"pallet-conviction-voting/std",
	"pallet-democracy/std",
	"pallet-elections-phragmen/std",
	"pallet-identity/std",
	"pallet-indices/std",
	"pallet-membership/std",
	"pallet-multisig/std",
	"pallet-preimage/std",
	"pallet-proxy/std",
	"pallet-ranked-collective/std",
	"pallet-referenda/std",
	"pallet-scheduler/std",
	"pallet-session/std",
	"pallet-timestamp/std",
	"pallet-tips/std",
	"pallet-transaction-payment-rpc-runtime-api/std",
	"pallet-transaction-payment/std",
	"pallet-treasury/std",
	"pallet-utility/std",
	"pallet-whitelist/std",
	"sp-api/std",
	"sp-arithmetic/std",
	"sp-block-builder/std",
	"sp-consensus-aura/std",
	"sp-core/std",
	"sp-inherents/std",
	"sp-io/std",
	"sp-offchain/std",
	"sp-runtime/std",
	"sp-session/std",
	"sp-staking/std",
	"sp-std/std",
	"sp-transaction-pool/std",
	"sp-version/std",
	"parachains-common/std",
	"cumulus-pallet-aura-ext/std",
	"cumulus-pallet-dmp-queue/std",
	"cumulus-pallet-parachain-system/std",
	"cumulus-pallet-xcm/std",
	"cumulus-pallet-xcmp-queue/std",
	"cumulus-primitives-core/std",
	"cumulus-primitives-timestamp/std",
	"cumulus-primitives-utility/std",
	"pallet-collator-selection/std",
	"parachain-info/std",
	"pallet-sudo/std",
	"pallet-assets/std",
	"pallet-uniques/std",
	"pallet-xcm/std",
	"polkadot-parachain-primitives/std",
	"polkadot-primitives/std",
	"xcm/std",
	"xcm-builder/std",
	"xcm-executor/std",

	"orml-tokens/std",
	"orml-traits/std",
	"orml-unknown-tokens/std",
	"orml-xcm-support/std",
	"orml-oracle/std",
	"orml-xcm/std",
	"orml-xtokens/std",

	"zenlink-protocol/std",
	"zenlink-protocol-runtime-api/std",
	"zenlink-stable-amm/std",
	"zenlink-stable-amm-runtime-api/std",
	"zenlink-swap-router/std",
	"merkle-distributor/std",

	"tangle-primitives/std",
	"tangle-asset-registry/std",
	"tangle-currencies/std",
	"tangle-runtime-common/std",
	"tangle-slp/std",
	"tangle-lst-minting/std",
	"tangle-parachain-staking/std",
	"tangle-xcm-interface/std",
	"pallet-asset-rate/std",
	"pallet-message-queue/std",
	"polkadot-runtime-common/std",
]
with-tracing = ["frame-executive/with-tracing"]

runtime-benchmarks = [
	"frame-benchmarking",
	"frame-system-benchmarking/runtime-benchmarks",
	"frame-support/runtime-benchmarks",
	"frame-system/runtime-benchmarks",
	"pallet-asset-rate/runtime-benchmarks",
	"pallet-balances/runtime-benchmarks",
	"pallet-bounties/runtime-benchmarks",
	"pallet-collective/runtime-benchmarks",
	"pallet-conviction-voting/runtime-benchmarks",
	"pallet-indices/runtime-benchmarks",
	"pallet-ranked-collective/runtime-benchmarks",
	"pallet-referenda/runtime-benchmarks",
	"pallet-scheduler/runtime-benchmarks",
	"pallet-timestamp/runtime-benchmarks",
	"pallet-treasury/runtime-benchmarks",
	"pallet-utility/runtime-benchmarks",
	"pallet-xcm/runtime-benchmarks",
	"pallet-tips/runtime-benchmarks",
	"pallet-elections-phragmen/runtime-benchmarks",
	"pallet-whitelist/runtime-benchmarks",
	"sp-runtime/runtime-benchmarks",
	"xcm-builder/runtime-benchmarks",
	"tangle-lst-minting/runtime-benchmarks",
	"tangle-slp/runtime-benchmarks",
	"tangle-asset-registry/runtime-benchmarks",
	"tangle-parachain-staking/runtime-benchmarks",
	"pallet-sudo/runtime-benchmarks",
	"pallet-assets/runtime-benchmarks",
	"pallet-uniques/runtime-benchmarks",
	"cumulus-pallet-dmp-queue/runtime-benchmarks",
	"cumulus-pallet-parachain-system/runtime-benchmarks"
]

try-runtime = [
	"frame-try-runtime",
	"frame-support/try-runtime",
	"frame-system/try-runtime",
	"frame-executive/try-runtime",
	"pallet-timestamp/try-runtime",
	"pallet-indices/try-runtime",
	"cumulus-pallet-parachain-system/try-runtime",
	"parachain-info/try-runtime",
	"pallet-balances/try-runtime",
	"pallet-transaction-payment/try-runtime",
	"pallet-authorship/try-runtime",
	"pallet-session/try-runtime",
	"pallet-aura/try-runtime",
	"cumulus-pallet-aura-ext/try-runtime",
	"tangle-parachain-staking/try-runtime",
	"pallet-democracy/try-runtime",
	"pallet-collective/try-runtime",
	"pallet-conviction-voting/try-runtime",
	"pallet-elections-phragmen/try-runtime",
	"pallet-membership/try-runtime",
	"cumulus-pallet-xcmp-queue/try-runtime",
	"pallet-xcm/try-runtime",
	"cumulus-pallet-xcm/try-runtime",
	"cumulus-pallet-dmp-queue/try-runtime",
	"pallet-collator-selection/try-runtime",
	"pallet-utility/try-runtime",
	"pallet-scheduler/try-runtime",
	"pallet-proxy/try-runtime",
	"pallet-multisig/try-runtime",
	"pallet-identity/try-runtime",
	"pallet-ranked-collective/try-runtime",
	"pallet-referenda/try-runtime",
	"pallet-treasury/try-runtime",
	"pallet-bounties/try-runtime",
	"pallet-tips/try-runtime",
	"pallet-preimage/try-runtime",
	"pallet-whitelist/try-runtime",
	"orml-xtokens/try-runtime",
	"orml-tokens/try-runtime",
	"tangle-currencies/try-runtime",
	"orml-unknown-tokens/try-runtime",
	"orml-xcm/try-runtime",
	"orml-oracle/try-runtime",
	"zenlink-protocol/try-runtime",
	"merkle-distributor/try-runtime",
	"zenlink-stable-amm/try-runtime",
	"zenlink-swap-router/try-runtime",
	"tangle-asset-registry/try-runtime",
	"tangle-lst-minting/try-runtime",
	"tangle-slp/try-runtime",
	"tangle-xcm-interface/try-runtime",
]

# When enabled, the runtime API will not be build.
#
# This is required by Cumulus to access certain types of the
# runtime without clashing with the runtime API exported functions
# in WASM.
disable-runtime-api = []

# A feature that should be enabled when the runtime should be build for on-chain
# deployment. This will disable stuff that shouldn't be part of the on-chain wasm
# to make it smaller like logging for example.
on-chain-release-build = ["sp-api/disable-logging"]

# Set timing constants (e.g. session period) to faster versions to speed up testing.
fast-runtime = []
