[package]
name = "tangle-stable-pool-rpc-runtime-api"
version = "0.8.0"
authors = ["Sora Yu <ymlll0508@gmail.com>"]
edition = "2021"

[dependencies]
parity-scale-codec = { workspace = true, features = ["derive"] }
sp-std = { workspace = true }
sp-api = { workspace = true }
tangle-primitives = { workspace = true }

[features]
default = ["std"]
std = [
    "parity-scale-codec/std",
    "sp-api/std",
    "tangle-primitives/std",
]
